# cfn-drift-remediation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  release.yaml
cfn_drift_remediation/: aws_error_utils.py  cli.py  cli_exceptions.py  object_tools.py  schema_tools.py  utils.py
tests/: test_cfn_drift_remediation.py
