[tool.poetry]
name = "cfn-drift-remediation"
version = "0.3.0"
description = ""
authors = ["Ben Bridts"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.43"
jsonpointer = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"

[tool.poetry.scripts]
cfn-drift-remediation = 'cfn_drift_remediation.cli:run'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
